Added a new photo

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="skill-row">
           <img class="code-img" src="images/programming.png" alt="">
           <h3>Coding</h3>
-          <p >It is one of my best skills that I have, I am skilled in python, c++, java, HTML/CSS, and I try to learn new thing each day to improve myself.</p>
+          <p >It is one of my best skills that I have, I am skilled in Python, C++, Java, HTML/CSS, and I try to learn new thing each day to improve myself.</p>
           <p class="code-skill-disc"></p>
 
         </div>
