Added a top part

--- a/index.html
+++ b/index.html
@@ -2,28 +2,63 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
     <title>Khaled Zaza</title>
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <div class="top_containor">
-      <img class="top-cloud"src="images/cloud.png" alt="cloud-img">
+    <section id="title">
 
-      <h1>I'm <span class="khaled">Khaled</span>.</h1>
-      <h2>a <span class="pro">pro</span>grammer.</h2>
+        <nav class="navbar  navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="">KZaza</a>
+             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-      <img src="images/forest.png" alt="mountain-img">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="Khaled's Resume 22.pdf">Resume</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="mailto:khaledzaza.cs@gmail.com">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.linkedin.com/in/kzaza">LinkedIn</a>
+                </li>
+            </ul>
+         </div>
+        </nav>
 
-    </div>
+        <div class="top_containor">
+
+
+          <img class="top-cloud"src="images/cloud.png" alt="cloud-img">
+
+          <h1>I'm <span class="khaled">Khaled</span>.</h1>
+          <h2>a <span class="pro">pro</span>grammer.</h2>
+
+          <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+          <img src="images/forest.png" alt="mountain-img">
+
+        </div>
+
+      </section>
+
 
     <div class="middle-container">
       <div class="profile">
         <img src="personalPic.png" alt="Khaled Profile Picture" width=200 height=200>
+        <h2></h2>
         <h2>Hello.</h2>
         <p class="intro">I am a dedicated and focused student pursuing a bachelor’s degree in Computer Science. Skilled in algorithms, data structures, and object-oriented languages, such as Python and C++. Highly motivated and adaptable to new concepts and technologies. Strong leadership, communications, and problem-solving skills that drive priorities forward.</p>
       </div>
