Added a top part

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h2>a <span class="pro">pro</span>grammer.</h2>
 
           <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-          <img src="images/forest.png" alt="mountain-img">
+          <img class="forest" src="images/forest.png" alt="mountain-img">
 
         </div>
 
