--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+
+    <div class="container-fluid">
+
     <section id="title">
 
         <nav class="navbar  navbar-expand-lg navbar-light bg-light">
@@ -53,6 +56,7 @@
         </div>
 
       </section>
+    </div>
 
 
     <div class="middle-container">
