--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/2d847519f4.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
@@ -22,7 +24,7 @@
     <section id="title">
 
         <nav class="navbar  navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="">KZaza</a>
+            <i class="fa-solid fa-code"></i><a class="navbar-brand" href="">KZaza</a>
              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -30,13 +32,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="Khaled's Resume 22.pdf">Resume</a>
+                    <a class="nav-link" href="Khaled's Resume 22.pdf"><i class="fa-solid fa-file"></i> Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="mailto:khaledzaza.cs@gmail.com">Contact</a>
+                    <a class="nav-link" href="mailto:khaledzaza.cs@gmail.com"><i class="fa-solid fa-envelope"></i> Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.linkedin.com/in/kzaza">LinkedIn</a>
+                    <a class="nav-link" href="https://www.linkedin.com/in/kzaza"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
                 </li>
             </ul>
          </div>
@@ -45,12 +47,12 @@
         <div class="top_containor">
 
 
-          <img class="top-cloud"src="images/cloud.png" alt="cloud-img">
+          <img class="top-cloud"src="images/cloud.png" alt="cloud-img" >
 
           <h1>I'm <span class="khaled">Khaled</span>.</h1>
           <h2>a <span class="pro">pro</span>grammer.</h2>
 
-<!--          <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">-->
+          <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" >
           <img class="forest" src="images/forest.png" alt="mountain-img">
 
         </div>
@@ -58,6 +60,7 @@
       </section>
     </div>
 
+    <div class="container-fluid">
 
     <div class="middle-container">
       <div class="profile">
@@ -95,12 +98,14 @@
         <a class="btn" href="mailto:khaledzaza.cs@gmail.com">Contact me</a>
       </div>
     </div>
+  </div>
+
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/kzaza">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/_khaledzaza">Twitter</a>
-      <a class="footer-link" href="https://www.instagram.com/_khaledzaza">Instagram</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/kzaza"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+      <a class="footer-link" href="https://twitter.com/_khaledzaza"><i class="fa-brands fa-twitter fa-2xl"></i></a>
+      <a class="footer-link" href="https://www.instagram.com/_khaledzaza"><i class="fa-brands fa-instagram fa-2xl"></i></a>
       <p class="copyright">© 2022 Khaled Zaza.</p>
     </div>
 
