--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h1>I'm <span class="khaled">Khaled</span>.</h1>
           <h2>a <span class="pro">pro</span>grammer.</h2>
 
-          <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" >
+<!--          <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" >-->
           <img class="forest" src="images/forest.png" alt="mountain-img">
 
         </div>
