Changed the Skill Set format

--- a/index.html
+++ b/index.html
@@ -83,22 +83,106 @@
       <div class="skills">
         <h2>My Skills.</h2>
 
-        <div class="skill-row">
-          <img class="code-img" src="images/programming.png" alt="">
-          <h3>Coding</h3>
-          <p >It is one of my best skills that I have, I am skilled in Python, C++, Java, HTML/CSS, and I try to learn new thing each day to improve myself.</p>
-          <p class="code-skill-disc"></p>
+<!--        <div class="skill-row">-->
+<!--          <img class="code-img" src="images/programming.png" alt="">-->
+<!--          <h3>Coding</h3>-->
+<!--          <p >It is one of my best skills that I have, I am skilled in Python, C++, Java, HTML/CSS, and I try to learn new thing each day to improve myself.</p>-->
+<!--          <p class="code-skill-disc"></p>-->
 
+<!--        </div>-->
+
+<!--        <div class="skill-row">-->
+<!--          <img class="team-img" src="images/teamwork.png" alt="">-->
+<!--          <h3>TeamWork</h3>-->
+<!--          <p>In my past experience I have been always working in teams, and being good at it, I feel comfortable around people because I belive team work make the dream work.</p>-->
+<!--          <p class="team-skill-disc"></p>-->
+<!--        </div>-->
+
+<!--      </div>-->
+
+      <section class="white-section" id="features">
+
+    <div class="container-fluid">
+
+      <div class="row">
+
+<!--        <div class="feature-box col-lg-4">-->
+<!--          <img class="icons" src="images/teamwork.png" alt="">-->
+<!--          <h3 class="feature-title">TeamWork</h3>-->
+<!--                              <p>Team work make the dream work.</p>-->
+
+<!--        </div>-->
+
+<!--        <div class="feature-box col-lg-4">-->
+<!--          <img class="icons" src="images/programming.png" alt="">-->
+<!--          <h3 class="feature-title">Coding</h3>-->
+<!--                              <p></p>-->
+
+<!--        </div>-->
+
+
+
+        <div class="feature-box col-lg-4">
+          <i class="icons fa-solid fa-code fa-4x"></i>
+          <h3 class="feature-title">Coding</h3>
+          <p>C++ | Python | Java | CSS | HTML | SQL</p>
         </div>
 
-        <div class="skill-row">
-          <img class="team-img" src="images/teamwork.png" alt="">
-          <h3>TeamWork</h3>
-          <p>In my past experience I have been always working in teams, and being good at it, I feel comfortable around people because I belive team work make the dream work.</p>
-          <p class="team-skill-disc"></p>
+        <div class="feature-box col-lg-4">
+          <i class=" icons fa-brands fa-codepen fa-4x"></i>
+          <h3 class="feature-title">Tools</h3>
+          <p>BootStrap | Flask  </p>
         </div>
 
+
+        <div class="feature-box col-lg-4">
+          <i class="icons fa-solid fa-laptop fa-4x"></i>
+          <h3 class="feature-title">Operating System</h3>
+          <p><i class="fa-brands fa-apple fa-xl"></i>   |   <i class="fa-brands fa-windows fa-xl"></i>   |   <i class="fa-brands fa-linux fa-xl"></i></p>
+        </div>
+
+           <div class="feature-box col-lg-4">
+
+          <i class="icons fa-solid fa-network-wired fa-4x"></i>
+          <h3 class="feature-title">OOP</h3>
+          <p>Data Structure | Algorithms | Debugging </p>
+        </div>
+
+        <div class="feature-box col-lg-4">
+          <i class="icons fa-brands fa-microsoft fa-4x"></i>
+          <h3 class="feature-title">MS office Suite </h3>
+          <p>Word | Excel | PowerPoint</p>
+        </div>
+
+        <div class="feature-box col-lg-4">
+          <i class=" icons fa-solid fa-coins fa-4x"></i>
+          <h3 class="feature-title">Accounting</h3>
+          <p>PeopleSoft | WebTMA </p>
+        </div>
+
+
+           <div class="feature-box col-lg-4">
+          <i class="icons fa-solid fa-people-group fa-4x"></i>
+          <h3 class="feature-title">TeamWork</h3>
+          <p> </p>
+        </div>
+
+        <div class="feature-box col-lg-4">
+          <i class="icons fa-brands fa-microsoft fa-4x"></i>
+          <h3 class="feature-title">Leadership</h3>
+          <p> </p>
+        </div>
+
+        <div class="feature-box col-lg-4">
+          <i class=" icons fa-solid fa-coins fa-4x"></i>
+          <h3 class="feature-title">Networking</h3>
+          <p> </p>
+        </div>
       </div>
+
+
+    </div>
+  </section>
       <hr>
 
       <div class="contact-me">
