Changes logos for skills

--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
         </div>
 
         <div class="feature-box col-lg-4">
-          <i class="icons fa-brands fa-microsoft fa-4x"></i>
+          <i class="icons fa-solid fa-globe fa-4x"></i>
           <h3 class="feature-title">Leadership</h3>
           <p> </p>
         </div>
 
         <div class="feature-box col-lg-4">
-          <i class=" icons fa-solid fa-coins fa-4x"></i>
+          <i class=" icons fa-solid fa-users-rectangle fa-4x"></i>
           <h3 class="feature-title">Networking</h3>
           <p> </p>
         </div>
