--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <img src="personalPic.png" alt="Khaled Profile Picture" width=200 height=200>
         <h2></h2>
         <h2>Hello.</h2>
-        <p class="intro">I am a dedicated and focused student pursuing a bachelor’s degree in Computer Science. Skilled in algorithms, data structures, and object-oriented languages, such as Python and C++. Highly motivated and adaptable to new concepts and technologies. Strong leadership, communications, and problem-solving skills that drive priorities forward.</p>
+        <p class="intro">I am a driven computer science student at San Jose State University, where I have honed my skills in programming languages such as Python, C++, and Java, as well as web development technologies like HTML and CSS. My passion for technology and understanding how things work drives me to continually seek out new learning opportunities and gain experience in the field. I am a leader by nature and possess excellent communication skills, making me a valuable asset to any team. I am always seeking new challenges and opportunities to apply my knowledge and skills to make an impact in the world of technology.</p>
       </div>
       <hr>
       <div class="skills">
