--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
+               <li class="nav-item">
+                    <a class="nav-link" href="https://github.com/KhZaza"><i class="fa-brands fa-github"></i> Github</a>
+                </li>
+
+              <li class="nav-item">
                     <a class="nav-link" href="Khaled s Resume 23.pdf"><i class="fa-solid fa-file"></i> Resume</a>
                 </li>
                 <li class="nav-item">
@@ -77,7 +81,12 @@
         <img src="personalPic.png" alt="Khaled Profile Picture" width=200 height=200>
         <h2></h2>
         <h2>Hello.</h2>
-        <p class="intro">I am a driven computer science student at San Jose State University, where I have honed my skills in programming languages such as Python, C++, and Java, as well as web development technologies like HTML and CSS. My passion for technology and understanding how things work drives me to continually seek out new learning opportunities and gain experience in the field. I am a leader by nature and possess excellent communication skills, making me a valuable asset to any team. I am always seeking new challenges and opportunities to apply my knowledge and skills to make an impact in the world of technology.</p>
+        <p class="intro">I am a driven computer science student at San Jose State University.
+          I have honed my programming skills in Python, C++, Java, PHP, and web development technologies like Javascript,
+          HTML, and CSS. My passion for technology and understanding how things work drives me to continually
+          seek new learning opportunities and gain experience in the field. I am a natural leader with excellent
+          communication skills, making me a valuable asset to any team. I am always seeking new challenges and
+          opportunities to apply my knowledge and skills to make an impact in the world of technology.</p>
       </div>
       <hr>
       <div class="skills">
@@ -94,13 +103,13 @@
         <div class="feature-box col-lg-4">
           <i class="icons fa-solid fa-code fa-4x"></i>
           <h3 class="feature-title">Coding</h3>
-          <p>C++ | Python | Java | CSS | HTML | SQL</p>
+          <p>C++ | Python | Java | PHP | Javascript | CSS | HTML | SQL</p>
         </div>
 
         <div class="feature-box col-lg-4">
           <i class=" icons fa-brands fa-codepen fa-4x"></i>
           <h3 class="feature-title">Tools</h3>
-          <p>BootStrap | Flask  </p>
+          <p>BootStrap | Flask | cURl | Laravel | Pandas | Jira</p>
         </div>
 
 
@@ -125,8 +134,8 @@
 
         <div class="feature-box col-lg-4">
           <i class=" icons fa-solid fa-coins fa-4x"></i>
-          <h3 class="feature-title">Accounting</h3>
-          <p>PeopleSoft | WebTMA </p>
+          <h3 class="feature-title">Finance</h3>
+          <p>PeopleSoft | WebTMA | Salesforce</p>
         </div>
 
 
@@ -167,11 +176,13 @@
 
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/kzaza"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
-      <a class="footer-link" href="https://twitter.com/_khaledzaza"><i class="fa-brands fa-twitter fa-2xl"></i></a>
+       <a class="footer-link" href="https://github.com/KhZaza"><i class="fa-brands fa-github fa-2xl"></i> </a>
+    <!--  <a class="footer-link" href="https://twitter.com/_khaledzaza"><i class="fa-brands fa-twitter fa-2xl"></i></a>-->
       <a class="footer-link" href="https://www.instagram.com/_khaledzaza"><i class="fa-brands fa-instagram fa-2xl"></i></a>
       <p class="copyright">© 2022 Khaled Zaza.</p>
     </div>
 
-
+    </div>
   </body>
+
 </html>
