--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
       </div>
       <hr>
       <div class="skills">
+      <div class="profile">
+        <img src="memojiLaptop.png" width=200 height=200>
+ </div>
         <h2> My Skills.</h2>
 
 
@@ -166,15 +169,18 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>I am more than happy to have a chat.</h3>
-        <p class="contact-mee">If there is any question about my work or my previos experience fell free to contact me anytime!</p>
         <a class="btn" href="mailto:khaledzaza.cs@gmail.com">Contact me</a>
       </div>
     </div>
   </div>
 
-
+ <div class="profile">
+        <img src="memoji.png" width=200 height=200>
+ </div>
+            <p >Connect with me!</p>
 
     <div class="bottom-container">
+
       <a class="footer-link" href="https://www.linkedin.com/in/kzaza"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
        <a class="footer-link" href="https://github.com/KhZaza"><i class="fa-brands fa-github fa-2xl"></i> </a>
     <!--  <a class="footer-link" href="https://twitter.com/_khaledzaza"><i class="fa-brands fa-twitter fa-2xl"></i></a>-->
